# PIRproject.OLD

./: README.md
bottle_classification_task/: README.md
bottle_classification_task/include/bak/: bridge.h
bottle_classification_task/src/: main.cpp  polycolor.cpp
c++_tests/: README.md
catkin_ws/src/learning_tf2/: CMakeLists.txt~
catkin_ws2/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws2/logs/openni_camera/: build.make.000.log.stderr
catkin_ws2/logs/vision/: build.make.000.log.stderr  build.make.032.log.stderr  build.make.047.log.stderr  build.make.048.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.052.log.stderr  build.make.053.log.stderr  (+8 more)
kinect/: README.md
kinect/src/: 7up.cpp~  canny.cpp~  crop.cpp~  histograma.h~  negative.cpp~  photos.cpp~  pony.cpp  prueba.cpp~
lenny_with_ros/: README.md
lenny_with_ros/learning_tf2/: CMakeLists.txt  package.xml
lenny_with_ros/motoman/: README.md
lenny_with_ros/vision/: README.md
motoman/motoman_sda10f_moveit_config/: CMakeLists.txt
opencv_for_rookies/src/: blancos.cpp~  canny~  histograma.cpp~  hsv.h~  huesaturation.cpp~  pet.cpp~  shots.cpp~
opencv_samples/: CMakeLists.txt  data_structure.cpp  display_image.cpp  video.cpp
opencv_samples/hsv/: CMakeLists.txt
opencv_samples/hsv/include/: hsv.h  hsv.h~
opencv_samples/hsv/src/: hsv.cpp  hsv.cpp~  main.cpp  main.cpp~
opencv_samples/src/: CMakeLists.txt~  detect.cpp~  hdp.cpp~  hdpe.cpp  hdpe.cpp~  hdpe2.cpp  hdpehsv.cpp  ir.cpp~  pony.cpp~
vision/src/: polycolor.cpp  polycolor.cpp~
(+928 files in other folders)
